# sin

./: Cargo.toml  build.rs  flake.nix  readme.org  rustfmt.toml  shell.nix
patches/: notmuch-01.patch  notmuch-02.patch  notmuch-03.patch  notmuch-04.patch  notmuch-05.patch
source/: imap.rs  lib.rs  maildir.rs  main.rs
source/notmuch/: bindings.h  bindings.rs  mod.rs
source/sync/: mod.rs  pull.rs  push.rs
tests/: correctness.rs  interruptions.rs  manual.rs  simple.rs
tests/common/: dovecot.rs  maildir.rs  mod.rs  notmuch.rs
